<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Gas Mixer</string>
	<string name="he">% He:</string>
	<string name="o2">% O2:</string>
	<string name="pres_imperial">psi</string>
	<string name="pres_metric">bar</string>
	<string name="depth_imperial">fsw</string>
	<string name="depth_metric">msw</string>
	<string name="switch_to_metric">Metric</string>
	<string name="switch_to_imperial">Imperial</string>
	<string name="desired">Desired Mix</string>
	<string name="starting">Starting Mix</string>
	<string name="topup_mix">Top-Up Mix</string>
	<string name="button_blend">Blend</string>
	<string name="copy">Copy This</string>
	<string name="enough">Do I Have Enough Gas?</string>
	<string name="oxygen">Oxygen</string>
	<string name="helium">Helium</string>
	<string name="air">Air</string>
	<string name="nitrogen">Nitrogen</string>
	<string name="result_impossible">Sorry, that can't be done! Check that the top-up mix is correct.</string>
	<string name="result_start_empty">Start with an empty tank</string>
	<string name="result_start">Start with %1$s %2$s of %3$s</string>
	<string name="result_drain">Drain to %1$s %2$s</string>
	<string name="result_add">Add %1$s %2$s of %3$s</string>
	<string name="result_topup">Top up with %1$s %2$s of %3$s</string>
	<string name="result_end">End with %1$s %2$s of %3$s</string>
	<string name="topup_result">Result is %s</string>
	<string name="topup_pres">Top-Up Pressure</string>
	<string name="button_topup">Top Up</string>
	<string name="set_topup">Set Top-Up Gas</string>
	<string name="about">About</string>
	<string name="change">Change</string>
	<string name="about_text">
		Gas Mixer v.1.0\n\n
		Copyright 2009 Ben Roberts. divestoclimb@gmail.com.\n\n
		Licensed under the Apache License, Version 2.0 (the "License");
		you may not use any part of this distribution except in
		compliance with the License. You may obtain a copy of the
		License at http://www.apache.org/licenses/LICENSE-2.0 Unless
		required by applicable law or agreed to in writing, software
		distributed under the License is distributed on an "AS IS"
		BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either
		express or implied. See the License for the specific language
		governing permissions and limitations under the License.\n\n
		Code for the sliders is Copyright 2007-2008 OpenIntents.org
		and is also licensed under the Apache License, Version 2.0.\n\n
		The matrix math library which supports the mixing calculations
		is JAMA http://math.nist.gov/javanumerics/jama/, a cooperative
		product of The MathWorks and the National Institute of
		Standards and Technology (NIST) which has been released to the
		public domain. Neither The MathWorks nor NIST assumes any
		responsibility whatsoever for its use by other parties, and
		makes no guarantees, expressed or implied, about its quality,
		reliability, or any other characteristic.
	</string>
</resources>
